--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "antd": "^4.16.2",
+    "bourbon": "^7.0.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "transform": "^1.1.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
