--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,7 @@ steps:
     npm test
   displayName: 'npm install and build'
 - task: PublishTestResults@2
+inputs:
+ testResultsFormat: 'JUnit'
+ testResultsFiles: './TEST-RESULTS.xml'
+ testRunTtile: 'Ejecutando Pruebas'
