Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,10 +18,7 @@ steps:
 - script: |
     npm install
     npm run build
+    npm install --save-dev mocha
     npm test
   displayName: 'npm install and build'
 - task: PublishTestResults@2
-inputs:
- testResultsFormat: 'JUnit'
- testResultsFiles: './TEST-RESULTS.xml'
- testRunTtile: 'Ejecutando Pruebas'
