--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
 steps:
 - task: NodeTool@0
@@ -19,7 +19,7 @@ steps:
     npm install
     npm run build
     npm install --save-dev mocha
-    npm test2
+    npm test
   displayName: 'npm install and build'
 - task: PublishTestResults@2
   inputs:
