--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,18 +12,19 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '14.x'
   displayName: 'Install Node.js'
 
 - script: |
     npm install
     npm run build
     npm install --save-dev mocha
+    npx mocha test2.js
     npm test
   displayName: 'npm install and build'
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: "TEST-*.xml"
-    testRunTitle: 'Ejecutar Prueba'
+    testResultsFiles: '**/TEST-*.xml'
+    testRunTitle: 'Ejecutar Pruebas'
 
