--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,10 @@ steps:
   displayName: 'npm install and build'
 - task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: 'testresults/TEST-*.xml'
-    searchFolder: '$(system.defaultworkingdirectory)/acceptancetest/testfolder'
-    failTaskOnFailedTests: true
-
+    testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
+    testResultsFiles: '**/TEST-*.xml' 
+    searchFolder: '$(System.DefaultWorkingDirectory)' # Optional
+    failTaskOnFailedTests: false # Optional
+    testRunTitle: # Optional
+    buildPlatform: # Optional
+    buildConfiguration: # Optional
