--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,6 @@ steps:
   displayName: 'npm install and build'
 - task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
-    testResultsFiles: '**/TEST-*.xml' 
-    searchFolder: '$(System.DefaultWorkingDirectory)' # Optional
-    failTaskOnFailedTests: false # Optional
-    testRunTitle: # Optional
-    buildPlatform: # Optional
-    buildConfiguration: # Optional
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/TEST-*.xml'
+    testRunTitle: 'Ejecutando Prueba'
