--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react-dom": "^17.0.5",
     "antd": "^4.16.2",
     "bourbon": "^7.0.0",
+    "material": "^0.4.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-onesignal": "^2.0.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-service-worker": "^0.1.1",
     "transform": "^1.1.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
