--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-measure": "^2.5.2",
     "react-onesignal": "^2.0.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-service-worker": "^0.1.1",
+    "styled-components": "^5.3.3",
     "transform": "^1.1.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
@@ -50,6 +52,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-measure": "^2.0.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.16"
   }
 }
