--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "@types/react-measure": "^2.0.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.16"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
